--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "recharts": "^2.15.0",
     "sql.js": "^1.13.0",
     "tailwind-merge": "^2.6.0",
+    "unpdf": "^1.4.0",
     "xlsx": "^0.18.5",
     "zustand": "^5.0.2"
   },
