--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@ai-sdk/react": "^3.0.0",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
+    "ai": "^6.0.0",
     "clsx": "^2.1.1",
     "comlink": "^4.4.2",
     "dexie": "^4.0.10",
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
     "recharts": "^2.15.0",
     "sql.js": "^1.13.0",
     "tailwind-merge": "^2.6.0",
