--- a/packages/proxy/package.json
+++ b/packages/proxy/package.json
@@ -9,7 +9,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "hono": "^4.6.0"
+    "@ai-sdk/google": "^3.0.2",
+    "ai": "^6.0.6",
+    "hono": "^4.6.0",
+    "workers-ai-provider": "^3.0.2",
+    "zod": "^3.24.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241127.0",
