--- a/packages/proxy/wrangler.toml
+++ b/packages/proxy/wrangler.toml
@@ -4,3 +4,8 @@ compatibility_date = "2024-12-01"
 
 [ai]
 binding = "AI"
+
+[observability.logs]
+enabled = true
+head_sampling_rate = 1
+invocation_logs = true
