--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ai": "^6.0.0",
     "clsx": "^2.1.1",
     "comlink": "^4.4.2",
+    "dayjs": "^1.11.19",
     "dexie": "^4.0.10",
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
