use proper monorepo setup

--- a/package.json
+++ b/package.json
@@ -2,49 +2,13 @@
   "name": "wakaru",
   "private": true,
   "version": "0.0.1",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "preview": "vite preview",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
-  },
-  "dependencies": {
-    "@ai-sdk/react": "^3.0.0",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-switch": "^1.1.2",
-    "ai": "^6.0.0",
-    "clsx": "^2.1.1",
-    "comlink": "^4.4.2",
-    "dayjs": "^1.11.19",
-    "dexie": "^4.0.10",
-    "framer-motion": "^11.15.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-markdown": "^10.1.0",
-    "recharts": "^2.15.0",
-    "sql.js": "^1.13.0",
-    "tailwind-merge": "^2.6.0",
-    "unpdf": "^1.4.0",
-    "xlsx": "^0.18.5",
-    "zustand": "^5.0.2"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@types/node": "^22.10.2",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@types/sql.js": "^1.4.9",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.47.0",
-    "vite": "^6.0.5"
+    "dev": "pnpm --filter @wakaru/ui dev",
+    "dev:server": "pnpm --filter @wakaru/server dev",
+    "build": "pnpm --filter @wakaru/ui build",
+    "build:server": "pnpm --filter @wakaru/server deploy",
+    "lint": "pnpm --filter @wakaru/ui lint",
+    "lint:fix": "pnpm --filter @wakaru/ui lint:fix",
+    "typecheck": "pnpm -r typecheck"
   }
 }
