--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -46,5 +46,10 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.47.0",
     "vite": "^6.0.5"
+  },
+  "license": "MIT",
+  "author": {
+    "name": "Isaac Adewumi",
+    "email": "hey@eniola.wtf"
   }
 }
