--- a/apps/server/wrangler.toml
+++ b/apps/server/wrangler.toml
@@ -2,9 +2,6 @@ name = "wakaru-api"
 main = "src/index.ts"
 compatibility_date = "2024-12-01"
 
-[ai]
-binding = "AI"
-
 [[ratelimits]]
 name = "CHAT_RATE_LIMITER"
 namespace_id = "1001"
@@ -14,3 +11,11 @@ simple = { limit = 20, period = 60 }
 enabled = true
 head_sampling_rate = 1
 invocation_logs = true
+
+[env.dev]
+name = "wakaru-api-dev"
+
+[[env.dev.ratelimits]]
+name = "CHAT_RATE_LIMITER"
+namespace_id = "1002"
+simple = { limit = 10, period = 60 }
