--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -12,19 +12,20 @@
   },
   "dependencies": {
     "@ai-sdk/react": "^3.0.0",
+    "@electric-sql/pglite": "^0.3.14",
+    "@electric-sql/pglite-react": "^0.2.32",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
     "ai": "^6.0.0",
     "clsx": "^2.1.1",
     "comlink": "^4.4.2",
     "dayjs": "^1.11.19",
-    "dexie": "^4.0.10",
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^10.1.0",
     "recharts": "^2.15.0",
-    "sql.js": "^1.13.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^2.6.0",
     "unpdf": "^1.4.0",
     "xlsx": "^0.18.5",
@@ -35,7 +36,6 @@
     "@types/node": "^22.10.2",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "@types/sql.js": "^1.4.9",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.39.1",
