add local model support for ai chat
- connect to any openai-compatible api (ollama, lm studio, etc.)
- three-way mode toggle: off / cloud / local
- local server config with connection testing and model selection
- block chat when local mode selected but not connected
- auto-reconnect to previously connected servers on app init
- fix tool calls and provider switching bugs

--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -11,11 +11,11 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@ai-sdk/openai-compatible": "^2.0.4",
     "@ai-sdk/react": "^3.0.0",
     "@electric-sql/pglite": "^0.3.14",
     "@electric-sql/pglite-react": "^0.2.32",
     "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-switch": "^1.1.2",
     "ai": "^6.0.0",
     "clsx": "^2.1.1",
     "comlink": "^4.4.2",
@@ -29,6 +29,7 @@
     "tailwind-merge": "^2.6.0",
     "unpdf": "^1.4.0",
     "xlsx": "^0.18.5",
+    "zod": "^3.24.0",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
